<resources>
    <string name="app_name">CoCo</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_forgotpassword">Forgot Password?</string>
    <string name="login_login">Login</string>
    <string name="login_signup">Sign Up</string>
    <string name="forgotpassword_forgotpassword">Forgot Password</string>
    <string name="forgotpassword_email">Email</string>
    <string name="forgotpassword_sendpassword">Send Password</string>
    <string name="signup_signup">Sign Up</string>
    <string name="signup_username">Username</string>
    <string name="signup_name">Name</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_confirmpassword">Confirm Password</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="main_nav_name">Chelsea Islan</string>
    <string name="main_nav_username">"&#x00040;"chelseaislan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
