<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:padding="@dimen/activity_margin"
    android:scrollbars="none"
    tools:context="me.firmannizammudin.coco.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/signup_txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/object_medium_margin"
            android:text="@string/signup_signup"
            android:textColor="@color/colorPrimary"
            android:textSize="38sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_txt_title"
            android:layout_marginTop="@dimen/object_small_margin">

            <EditText
                android:id="@+id/signup_et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/signup_username"
                android:inputType="textPersonName"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_til_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_til_username"
            android:layout_marginTop="@dimen/object_small_margin">

            <EditText
                android:id="@+id/signup_et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/signup_name"
                android:inputType="textPersonName"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_til_name"
            android:layout_marginTop="@dimen/object_small_margin">

            <EditText
                android:id="@+id/signup_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/signup_email"
                android:inputType="textEmailAddress"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_til_email"
            android:layout_marginTop="@dimen/object_small_margin">

            <EditText
                android:id="@+id/signup_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/signup_password"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_til_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_til_password"
            android:layout_marginTop="@dimen/object_small_margin">

            <EditText
                android:id="@+id/signup_et_confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/signup_confirmpassword"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/signup_btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_til_confirmpassword"
            android:layout_marginTop="@dimen/object_small_margin"
            android:background="@drawable/btn_white_selector"
            android:text="@string/login_signup"
            android:textColor="@drawable/btn_white_text_selector" />
    </RelativeLayout>
</ScrollView>
