<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/colorWhite"
    tools:context="me.firmannizammudin.coco.ForgotPasswordActivity">

    <TextView
        android:id="@+id/forgotpassword_txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/object_medium_margin"
        android:text="@string/forgotpassword_forgotpassword"
        android:textSize="38sp"
        android:textColor="@color/colorPrimary"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/forgotpassword_til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotpassword_txt_title"
        android:layout_marginTop="@dimen/object_medium_margin">

        <EditText
            android:id="@+id/forgotpassword_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/forgotpassword_email"
            android:inputType="textEmailAddress"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/forgotpassword_btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotpassword_til_email"
        android:layout_marginTop="@dimen/object_small_margin"
        android:background="@drawable/btn_red_selector"
        android:text="@string/forgotpassword_sendpassword"
        android:textColor="@drawable/btn_red_text_selector" />
</RelativeLayout>
