<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/colorPrimary"
    android:padding="@dimen/activity_margin"
    tools:context="me.firmannizammudin.coco.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/login_iv_logo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/object_medium_margin"
            android:src="@drawable/im_logo_white" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_iv_logo"
            android:layout_marginTop="@dimen/object_medium_margin"
            android:backgroundTint="@color/colorWhite"
            android:textColorHint="@color/colorWhite">

            <EditText
                android:id="@+id/login_et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/colorWhite"
                android:hint="@string/login_username"
                android:inputType="textPersonName"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_til_username"
            android:layout_marginTop="@dimen/object_very_small_margin"
            android:backgroundTint="@color/colorWhite"
            android:textColorHint="@color/colorWhite">

            <EditText
                android:id="@+id/login_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/colorWhite"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/login_txt_forgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/login_til_password"
            android:layout_marginTop="@dimen/object_very_small_margin"
            android:text="@string/login_forgotpassword"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_txt_forgotpassword"
            android:layout_marginTop="@dimen/object_medium_margin"
            android:background="@drawable/btn_red_selector"
            android:text="@string/login_login"
            android:textColor="@drawable/btn_red_text_selector" />

        <Button
            android:id="@+id/login_btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_btn_login"
            android:layout_marginTop="@dimen/object_small_margin"
            android:background="@drawable/btn_red_selector"
            android:text="@string/login_signup"
            android:textColor="@drawable/btn_red_text_selector" />
    </RelativeLayout>
</ScrollView>
